feat(8-kyu/java/python/js): find the capitals / dna to rna conversion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.fontSize": 16
+    "editor.fontSize": 16,
+    "java.project.sourcePaths": [
+        "8-kyu/java/Find the capitals",
+        "8-kyu/java/1. Find the capitals",
+        "8-kyu/java/2. DNA to RNA Conversion"
+    ]
 }
